2013-06-25 arnaud.fontaine
* ZODB Components: Migration must be all or nothing to avoid partial modifications of bt5 properties.

2013-06-25 arnaud.fontaine
* ZODB Components: Fix bootstrap of migrated bt5s.

2013-06-24 arnaud.fontaine
* Meaningless to remove ZODB Components migrated from FS. This will not work when there are several nodes anyway, so just display a message to the user.

2013-06-19 arnaud.fontaine
* Add 'does' to the closed-class words list in naming convention checking script.

2012-10-19 yusei
* Redirect to view form with a nice message if selected workflow action is not available. To show a workflow dialog which absolutely fail is not good.

2012-10-11 arnaud.fontaine
* Fix dead ProxyField after renaming of ProxyFields (now available in erp5_core_proxy_field_legacy).

2012-09-04 arnaud.fontaine
* message_attribute_does_not_match was incorrectly renamed to message_attribute_match when migrating StringAttributeMatch constraint from filesystem to ZODB. Also, use message_attribute_not_match instead of message_attribute_does_not_match to follow ERP5 naming convention.

2012-07-20 tatuya
* Set max_row 0 on IdTool_zGetValueList so that we can get all the records of portal_ids table when there are more than 1000 id_group.

2012-03-07 arnaud.fontaine
* Allow to choose preferred source code editor in Preference view.
* Use source code editor defined in Preference for Component_view.

2012-03-06 arnaud.fontaine
* Remove Accessor Component, Interface Component and Mixin Component Portal Types until implementation has been written.

2012-03-06 arnaud.fontaine
* Allow to specify version per Components in migration view.

2012-03-06 arnaud.fontaine
* Show Component versions defined on the BusinessTemplate in ZODB Migration view.

2012-03-06 arnaud.fontaine
* Add registered version priority selection on BusinessTemplate_view for registering version priority of ZODB Components only for now.

2012-03-05 arnaud.fontaine