@@ -52,7 +52,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Validation Workflow</string> </value>
+            <value> <string>Component Validation Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
